--- a/index.html
+++ b/index.html
@@ -231,6 +231,44 @@ h1 { font-size: 2.5em; text-shadow: 2px 2px 4px rgba(0,0,0,0.3); margin-bottom: 
     .control-group > * { width: 100%; }
     .team-name-display { font-size: 18px; }
 }
+
+@media (max-width: 768px) {
+
+    /* RESET TOTAL coach & goat */
+    .player-card.coach,
+    .player-card.goat {
+        all: unset;                     /* 🔥 reset complet */
+        width: 48px !important;
+        height: 48px !important;
+        background: rgba(0,0,0,0.6);
+        border-radius: 8px;
+        display: flex !important;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-sizing: border-box;
+    }
+
+    /* Icône / image */
+    .player-card.coach img,
+    .player-card.goat img {
+        width: 22px !important;
+        height: 22px !important;
+        margin: 0 !important;
+    }
+
+    /* Nom ultra compact */
+    .player-card.coach .player-name,
+    .player-card.goat .player-name {
+        font-size: 7px !important;
+        line-height: 1;
+        margin-top: 2px;
+        max-height: 14px;
+        overflow: hidden;
+        text-align: center;
+    }
+}
+
 </style>
 </head>
 <body>
